# clippy

./: Cargo.toml  README.md
src/: main.rs  utils.rs
src/audio/: recorder.rs
src/organizer/: mod.rs
src/summarization/: mod.rs
src/transcription/: mod.rs
